--- a/index.html
+++ b/index.html
@@ -1,244 +1,208 @@
 <!DOCTYPE html>
 <html lang="zh-Hans">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>PCD Lucky Wheel</title>
-  <style>
-    body{
-      margin:0; background:#fff; color:#333;
-      font-family:-apple-system,BlinkMacSystemFont,"PingFang SC","Microsoft YaHei",sans-serif;
-      display:flex; flex-direction:column; align-items:center; justify-content:center;
-      height:100vh; overflow:hidden;
-      -webkit-tap-highlight-color:transparent; user-select:none;
-    }
-    h2{margin:6px 0 12px; text-align:center}
-    .container{position:relative; display:flex; flex-direction:column; align-items:center}
-    /* 画布：先给保险尺寸，JS 会再调整高清像素比例 */
-    #wheelCanvas{
-      background:#fff; border-radius:50%;
-      width:340px; height:340px;
-      box-shadow: inset 0 0 0 10px rgba(107,35,157,.15), 0 6px 12px rgba(0,0,0,.08);
-      display:block;
-    }
-    /* 深紫色指针固定 12 点 */
-    .pointer{
-      position:absolute; top:calc(50% - 195px); left:50%; transform:translateX(-50%);
-      width:0; height:0; border-left:15px solid transparent; border-right:15px solid transparent; border-bottom:25px solid #5c1898;
-      z-index:10; filter:drop-shadow(0 2px 2px rgba(0,0,0,.2));
-    }
-    /* 中央深紫圆心（不转动，仅装饰，可去掉） */
-    .hub{
-      position:absolute; inset:auto; left:50%; top:50%; transform:translate(-50%,-50%);
-      width:24%; aspect-ratio:1/1; border-radius:50%;
-      background:#5c1898; box-shadow:0 2px 6px rgba(0,0,0,.18) inset, 0 0 0 10px #fff; z-index:2; pointer-events:none;
-    }
-    /* 按钮：淡粉色，置于转盘正下方 */
-    #spinBtn{
-      margin-top:16px; padding:10px 20px; border:none; border-radius:10px;
-      background:#f7d3e8; color:#4b0c7a; font-weight:700; font-size:16px; cursor:pointer;
-    }
-    #spinBtn:disabled{opacity:.6; cursor:not-allowed}
-    .chances{margin-top:6px; font-size:14px}
-    .note{margin-top:18px; width:92%; text-align:center; font-size:12px; line-height:1.5; color:#444}
-    .note a{color:#6b00c8; text-decoration:none; font-weight:700}
-    .links{margin-top:8px}
-    .links a{margin:0 10px}
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<title>PCD Lucky Wheel</title>
+<style>
+  /* —— 页面白底 —— */
+  body{
+    margin:0; background:#fff; color:#333;
+    font-family:-apple-system,BlinkMacSystemFont,"PingFang SC","Microsoft YaHei",sans-serif;
+    display:flex; flex-direction:column; align-items:center; justify-content:center;
+    min-height:100vh; -webkit-tap-highlight-color:transparent; user-select:none;
+  }
+  h2{margin:10px 0 12px; text-align:center}
+  .container{position:relative; display:flex; flex-direction:column; align-items:center}
+
+  /* —— 固定尺寸画布（最稳妥，不会消失）—— */
+  #wheelCanvas{
+    width:360px; height:360px;            /* CSS 尺寸 */
+    background:#fff; border-radius:50%;
+    box-shadow:inset 0 0 0 10px rgba(107,35,157,.14), 0 6px 14px rgba(0,0,0,.08);
+    display:block;
+  }
+  /* HTML 属性尺寸，避免变成 0×0 */
+  /* <canvas id="wheelCanvas" width="360" height="360"></canvas> 会配合上面的 CSS */
+
+  /* —— 深紫色三角指针固定 12 点 —— */
+  .pointer{
+    position:absolute; top:calc(50% - 200px); left:50%; transform:translateX(-50%);
+    width:0; height:0; border-left:14px solid transparent; border-right:14px solid transparent;
+    border-bottom:26px solid #5c1898; filter:drop-shadow(0 2px 2px rgba(0,0,0,.2));
+    z-index:10;
+  }
+
+  /* —— 中央深紫圆心（装饰）—— */
+  .hub{
+    position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
+    width:24%; aspect-ratio:1/1; border-radius:50%; background:#5c1898;
+    box-shadow:0 2px 6px rgba(0,0,0,.18) inset, 0 0 0 10px #fff;
+    z-index:2; pointer-events:none;
+  }
+
+  /* —— 按钮、次数、底部说明（底部才中英对照）—— */
+  #spinBtn{
+    margin-top:14px; padding:10px 18px; border:none; border-radius:10px;
+    background:#f7d3e8; color:#4b0c7a; font-weight:800; font-size:16px; cursor:pointer;
+  }
+  #spinBtn:disabled{opacity:.6; cursor:not-allowed}
+  #chances{margin-top:6px; font-size:14px}
+  .links{margin-top:10px}
+  .links a{color:#6b00c8; text-decoration:none; font-weight:700; margin:0 8px}
+  .note{margin-top:10px; font-size:12px; color:#444; text-align:center; line-height:1.5}
+</style>
 </head>
 <body>
   <h2>PCD Lucky Wheel<br><small>幸运转盘 · Lucky Draw</small></h2>
 
   <div class="container">
     <div class="pointer" aria-hidden="true"></div>
-    <canvas id="wheelCanvas" width="340" height="340"></canvas>
+    <!-- ✅ 同时有 CSS 和 HTML 尺寸，保证不为 0 -->
+    <canvas id="wheelCanvas" width="360" height="360"></canvas>
     <div class="hub" aria-hidden="true"></div>
   </div>
 
-  <!-- 按钮（中英对照） -->
+  <!-- 开始 / Start（转盘正下方，简体+英文） -->
   <button id="spinBtn">🎯 开始 / Start</button>
-  <div class="chances" id="chances">剩余次数 / Chances: --</div>
+  <div id="chances">剩余次数 / Chances: --</div>
 
-  <!-- 只有最下面区域做中英对照 -->
+  <!-- 只有最下面双语 -->
+  <div class="links">
+    <a id="subLink" href="#">订阅 / Subscribe</a>·
+    <a id="shareLink" href="#">分享 / Share</a>
+  </div>
   <div class="note">
-    <div class="links">
-      <a id="subLink" href="#">订阅 / Subscribe</a> ·
-      <a id="shareLink" href="#">分享 / Share</a>
-    </div>
     ⚠️ 所有奖项不能重叠使用 · Prizes cannot be combined<br>
-    订阅并分享频道可多一次机会 / Subscribe &amp; Share for +1 spin
+    订阅并分享频道可多一次机会 · Subscribe &amp; Share for +1 spin
   </div>
 
-  <!-- 先载 TweenMax，再载 Winwheel（顺序很重要） -->
+  <!-- 顺序很重要：先 GSAP，再 Winwheel -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/winwheel@2.8.0/Winwheel.min.js"></script>
 
   <script>
-    // 颜色（粉、紫、蓝、黄；对比清楚）
-    const C = ['#ffd1e8','#cbb2fe','#b6e1ff','#ffe07a'];
+  (function(){
+    /* ===== 配色（粉、紫、蓝、黄，对比清楚） ===== */
+    const COLORS = ['#ffd1e8','#cbb2fe','#b6e1ff','#ffe07a'];
 
-    // 9 个奖项
     const SEGMENTS = [
-      { fillStyle:C[0], text:'45⏰ or 60⏰/ 10 off' },
-      { fillStyle:C[1], text:'45⏰ or 60⏰/ 20 off' },
-      { fillStyle:C[2], text:'One more spin chance' },
-      { fillStyle:C[3], text:'45⏰ or 60⏰/ 10 off' },
-      { fillStyle:C[0], text:'Sorry 😢' },
-      { fillStyle:C[1], text:'45⏰ or 60⏰/ 20 off' },
-      { fillStyle:C[2], text:'Sorry 😢' },
-      { fillStyle:C[3], text:'45⏰ or 60⏰/ 40 off' },
-      { fillStyle:C[0], text:'Sorry 😢' }
+      { fillStyle: COLORS[0], text: '45⏰ or 60⏰/ 10 off' },
+      { fillStyle: COLORS[1], text: '45⏰ or 60⏰/ 20 off' },
+      { fillStyle: COLORS[2], text: 'One more spin chance' },
+      { fillStyle: COLORS[3], text: '45⏰ or 60⏰/ 10 off' },
+      { fillStyle: COLORS[0], text: 'Sorry 😢' },
+      { fillStyle: COLORS[1], text: '45⏰ or 60⏰/ 20 off' },
+      { fillStyle: COLORS[2], text: 'Sorry 😢' },
+      { fillStyle: COLORS[3], text: '45⏰ or 60⏰/ 40 off' },
+      { fillStyle: COLORS[0], text: 'Sorry 😢' }
     ];
 
-    // DOM
-    const canvas = document.getElementById('wheelCanvas');
-    const btn = document.getElementById('spinBtn');
-    const chancesEl = document.getElementById('chances');
-    const subLink = document.getElementById('subLink');
-    const shareLink = document.getElementById('shareLink');
-
-    // Telegram 环境
+    /* ===== Telegram 就绪 ===== */
     const isTG = !!(window.Telegram && Telegram.WebApp);
     if (isTG) { Telegram.WebApp.ready(); }
 
-    // 身份与本地存储（每 3 天 1 次 + bonus）
+    /* ===== 身份 & 3天一次限制（外加 bonus） ===== */
     const TG_USER = (isTG && Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initDataUnsafe.user) || null;
     const USER_ID = TG_USER ? String(TG_USER.id) : 'guest';
-    const STORAGE_KEY = 'pcd_wheel_' + USER_ID; // { lastBaseSpinISO: string|null, bonus: number }
+    const KEY = 'pcd_wheel_' + USER_ID; // { lastBaseSpinISO, bonus }
+    function readState(){ try{ return JSON.parse(localStorage.getItem(KEY)) || {lastBaseSpinISO:null, bonus:0}; }catch(e){ return {lastBaseSpinISO:null, bonus:0}; } }
+    function writeState(s){ localStorage.setItem(KEY, JSON.stringify(s)); }
+    function baseAvailable(now=new Date()){ const s=readState(); if(!s.lastBaseSpinISO) return true; return (now - new Date(s.lastBaseSpinISO)) >= 3*24*60*60*1000; }
+    function totalChances(){ const s=readState(); return (baseAvailable()?1:0) + (s.bonus|0); }
+    function consume(){ const s=readState(); if(s.bonus>0) s.bonus--; else s.lastBaseSpinISO=new Date().toISOString(); writeState(s); }
+    function addBonus(n=1){ const s=readState(); s.bonus=(s.bonus|0)+n; writeState(s); }
 
-    function readState(){
-      try { return JSON.parse(localStorage.getItem(STORAGE_KEY)) || { lastBaseSpinISO:null, bonus:0 }; }
-      catch(e){ return { lastBaseSpinISO:null, bonus:0 }; }
-    }
-    function writeState(s){ localStorage.setItem(STORAGE_KEY, JSON.stringify(s)); }
-
-    function baseAvailable(now=new Date()){
-      const st = readState();
-      if (!st.lastBaseSpinISO) return true; // 从未用过，给 1 次
-      return (now - new Date(st.lastBaseSpinISO)) >= 3*24*60*60*1000; // 3 天
-    }
-    function totalChances(){
-      const st = readState();
-      return (baseAvailable()?1:0) + (st.bonus|0);
-    }
-    function consumeChance(){
-      const st = readState();
-      if (st.bonus > 0) st.bonus -= 1;
-      else st.lastBaseSpinISO = new Date().toISOString();
-      writeState(st);
-    }
-    function addBonus(n=1){
-      const st = readState();
-      st.bonus = (st.bonus|0) + n;
-      writeState(st);
-    }
-    function updateChances(){
-      chancesEl.textContent = '剩余次数 / Chances: ' + totalChances();
-      btn.disabled = totalChances() <= 0;
-    }
-
-    // 订阅/分享：各 +1 次（底部链接）
-    function wireBonusLinks(){
-      subLink.addEventListener('click', function(e){
-        e.preventDefault();
-        if (isTG) Telegram.WebApp.openTelegramLink('https://t.me/pcatdolls');
-        addBonus(1); updateChances();
-      });
-      shareLink.addEventListener('click', function(e){
-        e.preventDefault();
-        try{
-          if (isTG && Telegram.WebApp.shareToStory) {
-            Telegram.WebApp.shareToStory({ text:'PCD Lucky Wheel', widget_link:'https://t.me/pcatdolls' });
-          } else if (isTG) {
-            Telegram.WebApp.openTelegramLink('https://t.me/pcatdolls');
-          }
-        } finally {
-          addBonus(1); updateChances();
+    /* ===== 订阅/分享：各 +1 次 ===== */
+    document.getElementById('subLink').onclick = (e)=>{
+      e.preventDefault();
+      if(isTG) Telegram.WebApp.openTelegramLink('https://t.me/pcatdolls');
+      addBonus(1); refresh();
+    };
+    document.getElementById('shareLink').onclick = (e)=>{
+      e.preventDefault();
+      try{
+        if(isTG && Telegram.WebApp.shareToStory){
+          Telegram.WebApp.shareToStory({text:'PCD Lucky Wheel', widget_link:'https://t.me/pcatdolls'});
+        }else if(isTG){
+          Telegram.WebApp.openTelegramLink('https://t.me/pcatdolls');
         }
-      });
-    }
+      } finally {
+        addBonus(1); refresh();
+      }
+    };
 
-    // 创建轮盘
+    /* ===== 转盘（固定 360 画布，外半径 168，确保可见） ===== */
+    const canvas = document.getElementById('wheelCanvas'); // 360×360
     let wheel = null;
-    function createWheel(){
-      // 高 DPI 处理（确保清晰）
-      const DPR = Math.max(1, Math.floor(window.devicePixelRatio || 1));
-      const cssSize = Math.min(460, Math.max(300, canvas.clientWidth)); // 保守范围
-      canvas.width = cssSize * DPR;
-      canvas.height = cssSize * DPR;
-      canvas.style.width = cssSize + 'px';
-      canvas.style.height = cssSize + 'px';
-      const ctx = canvas.getContext('2d');
-      ctx.setTransform(DPR,0,0,DPR,0,0);
 
+    function buildWheel(){
       wheel = new Winwheel({
-        canvasId:'wheelCanvas',
-        numSegments:SEGMENTS.length,
-        outerRadius: (cssSize/2) - 12, // 留外圈
+        canvasId: 'wheelCanvas',
+        numSegments: SEGMENTS.length,
+        outerRadius: 168,                 // 360/2 - 留出外圈描边
         textFontSize: 14,
         textFillStyle: '#333',
         segments: SEGMENTS,
         animation:{
-          type:'spinToStop', duration:5, spins:8,
-          callbackFinished:onFinished
+          type:'spinToStop',
+          duration:5,
+          spins:8,
+          callbackFinished:onDone
         }
       });
     }
 
-    // 点击开始
-    btn.addEventListener('click', () => {
+    /* ===== UI ===== */
+    const btn = document.getElementById('spinBtn');
+    const chancesEl = document.getElementById('chances');
+    function refresh(){
+      const t = totalChances();
+      chancesEl.textContent = '剩余次数 / Chances: ' + t;
+      btn.disabled = t <= 0;
+    }
+
+    btn.onclick = ()=>{
       if (totalChances() <= 0) {
-        const msg = '每人 3 天可转 1 次；订阅/分享或抽到「One more spin chance」可 +1 次。\nOne spin every 3 days. Subscribe/Share or landing on the bonus tile grants +1 chance.';
-        if (isTG && Telegram.WebApp.showAlert) Telegram.WebApp.showAlert(msg);
-        else alert(msg);
+        const msg = '每人 3 天可转 1 次；订阅/分享或抽到「One more spin chance」可 +1 次。\nOne spin every 3 days. Subscribe/Share or landing on bonus tile gives +1 chance.';
+        if (isTG && Telegram.WebApp.showAlert) Telegram.WebApp.showAlert(msg); else alert(msg);
         return;
       }
-      consumeChance(); updateChances();
+      consume(); refresh();
       btn.textContent = '🎰 旋转中 / Spinning…'; btn.disabled = true;
       wheel.startAnimation();
-      setTimeout(()=>{ btn.textContent = '🎯 开始 / Start'; btn.disabled = totalChances()<=0; }, 5200);
-    });
+      setTimeout(()=>{ btn.textContent='🎯 开始 / Start'; refresh(); }, 5200);
+    };
 
-    // 完成回调
-    function onFinished(seg){
-      const result = seg?.text || '';
-      if (/One more spin chance/i.test(result)) {
-        addBonus(1); updateChances();
-        notify('获得 +1 次机会 · +1 extra chance');
-      } else if (/Sorry/i.test(result)) {
-        notify('谢谢参与 · Thanks for playing');
-      } else {
-        notify('恭喜中奖：' + result + '\nCongratulations!');
-      }
+    /* ===== 结果处理 ===== */
+    function onDone(seg){
+      const text = seg?.text || '';
+      if (/One more spin chance/i.test(text)){ addBonus(1); refresh(); notify('获得 +1 次机会 · +1 extra chance'); }
+      else if (/Sorry/i.test(text)) { notify('谢谢参与 · Thanks for playing'); }
+      else { notify('恭喜中奖：'+text+'\nCongratulations!'); }
 
-      // 回传给 @pcd_luckywheel_bot：抽奖者名字 + 结果
+      // 回传给 @pcd_luckywheel_bot（姓名 + 结果）
       const u = TG_USER;
-      const name = u ? ((u.first_name || '') + (u.last_name ? (' ' + u.last_name) : '')) : 'Guest';
-      const handle = u && u.username ? ('@' + u.username) : '';
-      const payload = `Winner: ${name}${handle ? ' ' + handle : ''} | Result: ${result}`;
-      if (isTG && Telegram.WebApp.sendData) { try { Telegram.WebApp.sendData(payload); } catch(e){} }
+      const name = u ? ((u.first_name||'') + (u.last_name?(' '+u.last_name):'')) : 'Guest';
+      const handle = u && u.username ? ('@'+u.username) : '';
+      const payload = `Winner: ${name}${handle?' '+handle:''} | Result: ${text}`;
+      if (isTG && Telegram.WebApp.sendData) { try{ Telegram.WebApp.sendData(payload); }catch(e){} }
 
-      // 触觉（支持时）
-      try{ if (isTG && Telegram.WebApp.HapticFeedback) Telegram.WebApp.HapticFeedback.notificationOccurred('success'); }catch(e){}
+      try{ if(isTG && Telegram.WebApp.HapticFeedback){ Telegram.WebApp.HapticFeedback.notificationOccurred('success'); } }catch(e){}
     }
 
     function notify(message){
-      if (isTG && Telegram.WebApp.showPopup) {
-        Telegram.WebApp.showPopup({ title:'PCD Lucky Wheel', message, buttons:[{type:'ok', id:'ok'}] });
-      } else if (isTG && Telegram.WebApp.showAlert) {
-        Telegram.WebApp.showAlert(message);
-      } else {
-        alert(message);
-      }
+      if (isTG && Telegram.WebApp.showPopup) Telegram.WebApp.showPopup({title:'PCD Lucky Wheel', message, buttons:[{type:'ok', id:'ok'}]});
+      else if (isTG && Telegram.WebApp.showAlert) Telegram.WebApp.showAlert(message);
+      else alert(message);
     }
 
-    // 初始化（延迟，避免 WebView 尺寸未稳定）
-    function init(){
-      wireBonusLinks();
-      createWheel();
-      updateChances();
-    }
-    window.addEventListener('load', () => setTimeout(init, 300));
+    /* ===== 初始化（等 window.onload，100% 不丢画布） ===== */
+    window.addEventListener('load', function(){
+      buildWheel();
+      refresh();
+    });
+  })();
   </script>
 </body>
 </html>
