--- a/index.html
+++ b/index.html
@@ -1,241 +1,259 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-Hans">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>幸運轉盤</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+<title>幸运转盘 / Lucky Wheel</title>
+
+<!-- Google Fonts（英：Quicksand；中：Noto Sans SC） -->
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
+
 <style>
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: #fff0f5;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    height: 100vh;
-    color: #333;
+  /* 页面白底 + 字体 */
+  body{
+    margin:0; background:#fff; color:#333;
+    font-family:'Quicksand','Noto Sans SC',-apple-system,BlinkMacSystemFont,"PingFang SC","Microsoft YaHei",Arial,sans-serif;
+    display:flex; flex-direction:column; align-items:center; justify-content:center;
+    min-height:100vh; -webkit-tap-highlight-color:transparent; user-select:none;
   }
-  h2 {
-    margin-top: 10px;
+  h2{margin:10px 0 12px; text-align:center; font-weight:700}
+  .wrap{position:relative; display:flex; flex-direction:column; align-items:center}
+
+  /* 固定畫布尺寸（穩定）──要更大改 360 -> 420/460，CSS 與 HTML 同步 */
+  #wheel{
+    width:360px; height:360px; display:block; background:#fff; border-radius:50%;
+    box-shadow:inset 0 0 0 10px rgba(107,35,157,.14), 0 6px 14px rgba(0,0,0,.08);
   }
-  #wheel-container {
-    position: relative;
-    width: 90vw;
-    max-width: 400px;
-    height: 90vw;
-    max-height: 400px;
-    margin-top: 20px;
+
+  /* 深紫色箭頭指針固定 12 点 */
+  .pointer{
+    position:absolute; top:calc(50% - 200px); left:50%; transform:translateX(-50%);
+    width:0; height:0; border-left:14px solid transparent; border-right:14px solid transparent;
+    border-bottom:26px solid #5c1898; /* 深紫 */
+    filter:drop-shadow(0 2px 2px rgba(0,0,0,.25));
+    z-index:10;
   }
-  canvas {
-    width: 100%;
-    height: 100%;
+  .pointer:after{
+    content:""; position:absolute; left:-3px; top:26px; width:6px; height:14px; background:#5c1898; border-radius:3px;
   }
-  #pointer {
-    position: absolute;
-    top: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 0; 
-    height: 0; 
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    border-bottom: 20px solid #4B0082; /* 深紫色指針 */
-    z-index: 10;
+
+  /* 中央深紫圓心（裝飾，不轉動） */
+  .hub{
+    position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
+    width:24%; aspect-ratio:1/1; border-radius:50%; background:#5c1898;
+    box-shadow:0 2px 6px rgba(0,0,0,.18) inset, 0 0 0 10px #fff; pointer-events:none; z-index:2;
   }
-  #spinBtn {
-    margin-top: 20px;
-    padding: 12px 24px;
-    background-color: #ff69b4;
-    border: none;
-    border-radius: 8px;
-    color: #fff;
-    font-size: 16px;
-    cursor: pointer;
+
+  /* 開始 / Start 按鈕：淡粉圓角 */
+  #spinBtn{
+    margin-top:14px; padding:10px 20px; border:none; border-radius:12px;
+    background:#f7d3e8; color:#4b0c7a; font-weight:800; font-size:16px; cursor:pointer;
   }
-  #spinBtn:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  #status {
-    margin-top: 10px;
-    font-size: 14px;
-  }
-  #footer {
-    margin-top: 20px;
-    font-size: 12px;
-    text-align: center;
-  }
-  #footer a {
-    color: #007bff;
-    text-decoration: none;
-  }
+  #spinBtn:disabled{opacity:.6; cursor:not-allowed}
+
+  /* 剩余次數 / Chances */
+  #chances{margin-top:6px; font-size:14px}
+
+  /* 底部連結與備註（雙語） */
+  .links{margin-top:12px}
+  .links a{color:#6b00c8; text-decoration:none; font-weight:700; margin:0 10px}
+  .note{margin-top:10px; font-size:12px; color:#444; text-align:center; line-height:1.5}
 </style>
 </head>
 <body>
+  <h2>幸运转盘 / Lucky Wheel</h2>
 
-<h2>幸运转盘 / Lucky Wheel</h2>
-<div id="wheel-container">
-  <div id="pointer"></div>
-  <canvas id="wheel" width="400" height="400"></canvas>
-</div>
-<button id="spinBtn">旋转 / Spin</button>
-<div id="status">剩余抽奖次数 / Remaining chances: <span id="chances">3</span></div>
-<div id="footer">
-  ⚠️所有奖项不能重复使用 / All prizes cannot be used together<br/>
-  <a href="https://t.me/pcatdolls" target="_blank">订阅/Subscribe & Share Channel</a> / Subscribe and share channel
-</div>
+  <div class="wrap">
+    <div class="pointer" aria-hidden="true"></div>
+    <!-- 同時設定 HTML 屬性與 CSS 尺寸，保證可見 -->
+    <canvas id="wheel" width="360" height="360"></canvas>
+    <div class="hub" aria-hidden="true"></div>
+  </div>
+
+  <button id="spinBtn">🎯 开始 / Start</button>
+  <div id="chances">剩余次数 / Chances: --</div>
+
+  <div class="links">
+    <a id="subLink" href="#">订阅 / Subscribe</a>
+    <a id="shareLink" href="#">分享 / Share</a>
+  </div>
+
+  <div class="note">
+    ⚠️ 所有奖项不能重叠使用 / Prizes cannot be combined
+  </div>
 
 <script>
-const prizes = [
-  { text: "45⏰ or 60⏰ / 10 off", color: ["#ff69b4","#dda0dd","#87cefa","#ffff66"], special: false },
-  { text: "45⏰ or 60⏰ / 20 off", color: ["#ff69b4","#dda0dd","#87cefa","#ffff66"], special: false },
-  { text: "One more spin chance", color: ["#ff69b4","#dda0dd","#87cefa","#ffff66"], special: true },
-  { text: "45⏰ or 60⏰ / 10 off", color: ["#ff69b4","#dda0dd","#87cefa","#ffff66"], special: false },
-  { text: "Sorry 😢", color: ["#ffd700","#ffb6c1","#add8e6","#ffff66"], special: false },
-  { text: "45⏰ or 60⏰ / 20 off", color: ["#ff69b4","#dda0dd","#87cefa","#ffff66"], special: false },
-  { text: "Sorry 😢", color: ["#ffd700","#ffb6c1","#add8e6","#ffff66"], special: false },
-  { text: "45⏰ or 60⏰ / 40 off", color: ["#ff69b4","#dda0dd","#87cefa","#ffff66"], special: false },
-  { text: "Sorry 😢", color: ["#ffd700","#ffb6c1","#add8e6","#ffff66"], special: false },
+/* ===== 视觉配色（梦幻粉/紫/蓝/黄，清楚对比） ===== */
+const PALETTE = ['#ffd1e8','#cbb2fe','#b6e1ff','#ffe07a'];
+
+/* ===== 奖项（9 项；只保留英文，不做中英对照） ===== */
+const PRIZES = [
+  { text:'45⏰ or 60⏰/ 10 off', color:PALETTE[0] },
+  { text:'45⏰ or 60⏰/ 20 off', color:PALETTE[1] },
+  { text:'One more spin chance', color:PALETTE[2], bonus:true },
+  { text:'45⏰ or 60⏰/ 10 off', color:PALETTE[3] },
+  { text:'Sorry 😢',              color:PALETTE[0] },
+  { text:'45⏰ or 60⏰/ 20 off', color:PALETTE[1] },
+  { text:'Sorry 😢',              color:PALETTE[2] },
+  { text:'45⏰ or 60⏰/ 40 off', color:PALETTE[3] },
+  { text:'Sorry 😢',              color:PALETTE[0] },
 ];
 
-let chances = 3;
-let extraSpin = 0; // 由"One more spin"獎項獲得
-let lastSpinDate = null;
+/* ===== Telegram 环境 ===== */
+const isTG = !!(window.Telegram && Telegram.WebApp);
+if (isTG) Telegram.WebApp.ready();
+const TG_USER = (isTG && Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initDataUnsafe.user) || null;
+const USER_ID = TG_USER ? String(TG_USER.id) : 'guest';
+const STORAGE_KEY = 'pcd_wheel_' + USER_ID; // { lastBaseSpinISO, bonus }
 
-// 儲存中獎結果
-let lastPrize = null;
+/* ===== 3 天限制 & 次数 ===== */
+function readState(){ try{ return JSON.parse(localStorage.getItem(STORAGE_KEY)) || {lastBaseSpinISO:null, bonus:0}; }catch(e){ return {lastBaseSpinISO:null, bonus:0}; } }
+function writeState(s){ localStorage.setItem(STORAGE_KEY, JSON.stringify(s)); }
+function baseAvailable(now=new Date()){ const s=readState(); if(!s.lastBaseSpinISO) return true; return (now - new Date(s.lastBaseSpinISO)) >= 3*24*60*60*1000; }
+function totalChances(){ const s=readState(); return (baseAvailable()?1:0) + (s.bonus|0); }
+function consumeOne(){ const s=readState(); if(s.bonus>0) s.bonus--; else s.lastBaseSpinISO = new Date().toISOString(); writeState(s); }
+function addBonus(n=1){ const s=readState(); s.bonus=(s.bonus|0)+n; writeState(s); }
 
-// 初始化轉盤
+/* ===== DOM ===== */
 const canvas = document.getElementById('wheel');
 const ctx = canvas.getContext('2d');
+const spinBtn = document.getElementById('spinBtn');
+const chancesEl = document.getElementById('chances');
+const subLink = document.getElementById('subLink');
+const shareLink = document.getElementById('shareLink');
 
-function drawWheel() {
-  const total = prizes.length;
-  const startAngle = 0;
-  const arc = Math.PI * 2 / total;
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  const radius = Math.min(canvas.width/2, canvas.height/2);
-  for(let i=0; i<total; i++) {
-    ctx.save();
-    ctx.translate(canvas.width/2, canvas.height/2);
+/* ===== 繪製轉盤（只轉盤、指針不動） ===== */
+const TOTAL = PRIZES.length;
+const ARC = Math.PI * 2 / TOTAL;
+const RADIUS = Math.min(canvas.width, canvas.height)/2 - 12; // 留外圈
+
+function drawWheel(rotation=0){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  ctx.save();
+  ctx.translate(canvas.width/2, canvas.height/2);
+  ctx.rotate(rotation); // 整盤旋轉
+  for(let i=0;i<TOTAL;i++){
+    const start = i*ARC;
+    const end   = start + ARC;
+
+    // 扇形
     ctx.beginPath();
     ctx.moveTo(0,0);
-    ctx.fillStyle = prizes[i].color[Math.floor(Math.random()*prizes[i].color.length)];
-    ctx.arc(0, 0, radius, startAngle + i*arc, startAngle + (i+1)*arc);
-    ctx.lineTo(0,0);
+    ctx.fillStyle = PRIZES[i].color;
+    ctx.arc(0,0,RADIUS,start,end,false);
+    ctx.closePath();
     ctx.fill();
 
     // 文字
-    ctx.rotate(startAngle + (i+0.5)*arc);
-    ctx.textAlign = "right";
-    ctx.font = "14px Arial";
-    ctx.fillStyle = "#fff";
-    ctx.fillText(prizes[i].text, radius - 10, 8);
+    ctx.save();
+    ctx.rotate(start + ARC/2);
+    ctx.fillStyle = '#333';
+    ctx.font = '14px Quicksand, "Noto Sans SC", -apple-system, BlinkMacSystemFont, "PingFang SC", "Microsoft YaHei", Arial, sans-serif';
+    ctx.textAlign = 'right';
+    ctx.textBaseline = 'middle';
+    ctx.fillText(PRIZES[i].text, RADIUS - 10, 0);
     ctx.restore();
   }
-}
-drawWheel();
-
-function getPrizeIndex(angle) {
-  const total = prizes.length;
-  const arc = Math.PI * 2 / total;
-  let index = Math.floor(((angle + Math.PI*2) % (Math.PI*2)) / arc);
-  return index;
+  ctx.restore();
 }
 
-function spin() {
-  if (chances <= 0) {
-    alert("没有剩余次数 / No chances left");
+/* 指針固定於 12 點（-90°）；由 rotation 決定落點 */
+function prizeIndexFromRotation(rotation){
+  const norm = (rotation % (Math.PI*2) + Math.PI*2) % (Math.PI*2);
+  return Math.floor( ((Math.PI*2) - norm) / ARC ) % TOTAL;
+}
+
+/* ===== UI（双语） ===== */
+function refreshChances(){
+  const t = totalChances();
+  chancesEl.textContent = '剩余次数 / Chances: ' + t;
+  spinBtn.disabled = t <= 0;
+}
+subLink.addEventListener('click', e=>{
+  e.preventDefault();
+  if (isTG) Telegram.WebApp.openTelegramLink('https://t.me/pcatdolls');
+  addBonus(1); refreshChances();
+});
+shareLink.addEventListener('click', e=>{
+  e.preventDefault();
+  try{
+    if (isTG && Telegram.WebApp.shareToStory) {
+      Telegram.WebApp.shareToStory({text:'Lucky Wheel', widget_link:'https://t.me/pcatdolls'});
+    } else if (isTG) {
+      Telegram.WebApp.openTelegramLink('https://t.me/pcatdolls');
+    }
+  } finally {
+    addBonus(1); refreshChances();
+  }
+});
+
+/* ===== 旋轉動畫 ===== */
+let spinning = false;
+spinBtn.addEventListener('click', ()=>{
+  if (spinning) return;
+  if (totalChances() <= 0){
+    const msg = '每人 3 天可转 1 次 / One spin every 3 days；订阅/分享或抽到 “One more spin chance” 可 +1 次 / Subscribe, Share, or land on the bonus tile for +1 chance.';
+    if (isTG && Telegram.WebApp.showAlert) Telegram.WebApp.showAlert(msg); else alert(msg);
     return;
   }
-  chances--;
-  document.getElementById('chances').innerText = chances + extraSpin;
+  spinning = true;
+  consumeOne(); refreshChances();
 
-  const spinDegree = Math.random() * 360 + 360 * 4; // 最少轉4圈
-  const start = performance.now();
-  const duration = 4000; // 轉動時間
-  const animate = (now) => {
-    const elapsed = now - start;
-    const progress = Math.min(elapsed / duration, 1);
-    const easeProgress = 1 - Math.pow(1 - progress, 3); // 漸進
-    const currentDegree = easeProgress * spinDegree;
-    ctx.save();
-    ctx.translate(canvas.width/2, canvas.height/2);
-    ctx.rotate(currentDegree * Math.PI / 180);
-    ctx.translate(-canvas.width/2, -canvas.height/2);
-    drawWheel();
-    ctx.restore();
-    if (progress < 1) {
-      requestAnimationFrame(animate);
-    } else {
-      // 判斷獎項
-      const finalAngle = (currentDegree % 360);
-      const prizeIdx = getPrizeIndex(finalAngle * Math.PI/180);
-      const prize = prizes[prizeIdx];
-      lastPrize = prize;
-      // 顯示結果
-      alert(`中奖 / You won: ${prize.text}`);
-      // 若獎項是"One more spin chance"，額外增加一次
-      if (prize.text === "One more spin chance") {
-        chances++;
-        document.getElementById('chances').innerText = chances + extraSpin;
-        alert("獲得額外轉盤機會 / Extra spin gained!");
-      }
-      // 回傳通知（可用Telegram Bot API集成）
-      sendPrizeMessage(prize.text);
-    }
-  };
-  requestAnimationFrame(animate);
+  const spinDeg = (360*4) + Math.random()*360; // 至少 4 圈
+  const spinRad = spinDeg * Math.PI/180;
+  const startTs = performance.now();
+  const duration = 4500;
+
+  function frame(now){
+    const p = Math.min((now - startTs)/duration, 1);
+    const ease = 1 - Math.pow(1-p, 3); // 缓出
+    const rot = ease * spinRad;
+    drawWheel(rot);
+    if (p < 1) requestAnimationFrame(frame);
+    else { onSpinDone(rot); spinning = false; }
+  }
+  requestAnimationFrame(frame);
+});
+
+/* ===== 結果處理 & 回傳給 bot ===== */
+function onSpinDone(rotation){
+  const idx = prizeIndexFromRotation(rotation);
+  const prize = PRIZES[idx];
+
+  if (prize.bonus) {
+    addBonus(1); refreshChances();
+    notify('获得 +1 次机会 / +1 extra chance');
+  } else if (/Sorry/i.test(prize.text)) {
+    notify('谢谢参与 / Thanks for playing');
+  } else {
+    notify('恭喜中奖：' + prize.text + ' / Congratulations!');
+  }
+
+  // 回传给 @pcd_luckywheel_bot（抽奖者名字 + 结果），由你的 bot 端接收 web_app_data
+  const u = TG_USER;
+  const name = u ? ((u.first_name||'') + (u.last_name?(' '+u.last_name):'')) : 'Guest';
+  const handle = u && u.username ? ('@'+u.username) : '';
+  const payload = `Winner: ${name}${handle?' '+handle:''} | Result: ${prize.text}`;
+  if (isTG && Telegram.WebApp.sendData) { try{ Telegram.WebApp.sendData(payload); }catch(e){} }
+
+  try{ if(isTG && Telegram.WebApp.HapticFeedback){ Telegram.WebApp.HapticFeedback.notificationOccurred('success'); } }catch(e){}
 }
 
-function sendPrizeMessage(message) {
-  // 這裡可以用Telegram Bot API發送訊息到@pcd_luckywheel_bot
-  // 需要你的bot token及chat_id
-  fetch('https://api.telegram.org/bot 7779859704:AAHwAPPUhTQQRwVJ1FeGJUuY6BJ5vBmFths/sendMessage', {
-    method: 'POST',
-    headers: {'Content-Type': 'application/json'},
-    body: JSON.stringify({
-      chat_id: '@pcd_luckywheel_bot',
-      text: `🎉 抽獎結果 / Result: ${message}`
-    })
-  });
-}
-
-// 事件監聽
-document.getElementById('spinBtn').addEventListener('click', spin);
-
-// 3天限制
-function checkLastSpin() {
-  const now = new Date();
-  if (lastSpinDate) {
-    const diff = (now - new Date(lastSpinDate)) / (1000*3600*24);
-    if (diff < 3) {
-      alert(`每3天只能抽一次 / You can only spin once every 3 days`);
-      document.getElementById('spinBtn').disabled = true;
-    } else {
-      document.getElementById('spinBtn').disabled = false;
-    }
+function notify(message){
+  if (isTG && Telegram.WebApp.showPopup) {
+    Telegram.WebApp.showPopup({title:'幸运转盘 / Lucky Wheel', message, buttons:[{type:'ok', id:'ok'}]});
+  } else if (isTG && Telegram.WebApp.showAlert) {
+    Telegram.WebApp.showAlert(message);
+  } else {
+    alert(message);
   }
 }
-checkLastSpin();
 
-// 紀錄最後轉動時間
-function recordSpin() {
-  lastSpinDate = new Date().toISOString();
-  // 儲存到localStorage或後端
-}
-
-// 增加訂閱/分享獎勵
-// 按鈕或事件來觸發額外轉盤機會
-// 這裡示範
-// 假設點擊後獲得一次額外機會
-function subscribeShare() {
-  chances++;
-  document.getElementById('chances').innerText = chances + extraSpin;
-  alert("獲得額外轉盤機會 / Extra spin from subscribe/share!");
-}
-
+/* ===== 初始化 ===== */
+window.addEventListener('load', ()=>{
+  drawWheel(0);
+  refreshChances();
+});
 </script>
 </body>
 </html>
